--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "react-dom": "^16.8.6"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
+    "start": "react-scripts --openssl-legacy-provider  start",
+    "build": "react-scripts --openssl-legacy-provider  build",
+    "test": "react-scripts --openssl-legacy-provider  test --env=jsdom",
+    "eject": "react-scripts --openssl-legacy-provider  eject",
     "deploy": "gh-pages -d build"
   },
   "browserslist": {
